crates/squawk_parser/tests/snapshots/tests__load_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/load.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  LOAD
    LOAD_KW "load"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    SEMICOLON ";"
  WHITESPACE "\n\n"
