crates/squawk_parser/tests/snapshots/tests__move_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/move.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    NEXT
      NEXT_KW "next"
    WHITESPACE " "
    FROM_KW "from"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR
      PRIOR_KW "prior"
    WHITESPACE " "
    FROM_KW "from"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR
      PRIOR_KW "prior"
    WHITESPACE " "
    IN_KW "in"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR
      PRIOR_KW "prior"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    NEXT
      NEXT_KW "NEXT"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    PRIOR
      PRIOR_KW "PRIOR"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    FIRST
      FIRST_KW "FIRST"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    LAST
      LAST_KW "LAST"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    ABSOLUTE
      ABSOLUTE_KW "ABSOLUTE"
      WHITESPACE " "
      LITERAL
        INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    RELATIVE
      RELATIVE_KW "RELATIVE"
      WHITESPACE " "
      LITERAL
        INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    PREFIX_EXPR
      MINUS "-"
      LITERAL
        INT_NUMBER "5"
    WHITESPACE " "
    IN_KW "IN"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    ALL
      ALL_KW "ALL"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD
      FORWARD_KW "FORWARD"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD
      FORWARD_KW "FORWARD"
      WHITESPACE " "
      LITERAL
        INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD
      FORWARD_KW "FORWARD"
      WHITESPACE " "
      PREFIX_EXPR
        PLUS "+"
        LITERAL
          INT_NUMBER "5"
    WHITESPACE " "
    IN_KW "IN"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    FORWARD
      FORWARD_KW "FORWARD"
      WHITESPACE " "
      ALL_KW "ALL"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    BACKWARD
      BACKWARD_KW "BACKWARD"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    BACKWARD
      BACKWARD_KW "BACKWARD"
      WHITESPACE " "
      LITERAL
        INT_NUMBER "10"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n"
  MOVE
    MOVE_KW "move"
    WHITESPACE " "
    BACKWARD
      BACKWARD_KW "BACKWARD"
      WHITESPACE " "
      ALL_KW "ALL"
    WHITESPACE " "
    FROM_KW "FROM"
    WHITESPACE " "
    CURSOR_REF
      IDENT "cursor_name"
    SEMICOLON ";"
  WHITESPACE "\n\n"
